--- a/client/package.json
+++ b/client/package.json
@@ -8,11 +8,15 @@
     "@testing-library/react": "^11.1.2",
     "@testing-library/user-event": "^12.2.2",
     "axios": "^0.21.0",
+    "bootstrap": "^4.5.3",
     "install": "^0.13.0",
+    "jquery": "^3.5.1",
     "materialize-css": "^1.0.0-rc.2",
     "npm": "^6.14.9",
+    "popper.js": "^1.16.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-helmet": "^6.1.0",
     "react-scripts": "4.0.0",
     "web-vitals": "^0.2.4"
   },
