--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.0",
     "react-dom": "^17.0.1",
+    "react-grid-gallery": "^0.5.5",
     "react-helmet": "^6.1.0",
     "react-scripts": "4.0.0",
     "reactstrap": "^8.7.1",
